# car-data-pipeline

./: .gitignore  LICENSE  README.md  clean_car_listings.csv  clean_catalogue.csv  dirty_car_listings.csv  dirty_catalogue.csv  generate_data.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
dashboard/: app.py
src/: pipeline.py
tests/: __init__.py  test_pipeline.py
