[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "car-data-pipeline"
version = "1.0.0"
description = "Car Data ETL Pipeline"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=1.31.0",
    "pytest>=9.1.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]